Fix navbar responsive on mobile

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,7 +18,7 @@
     position: relative;
 
     @extend %flexCenter;
-    @include abstract.breakpoint(md) {
+    @include abstract.breakpoint(sm) {
         justify-content: space-between;
     }
 }
@@ -43,10 +43,10 @@
 
         background: var(--body-bg);
         border-radius: 0px 20px 20px 0px;
-        box-shadow: 0px 40px 90px 20px var(--dropdown-shadow);
 
         &.show {
             translate: 0;
+            box-shadow: 0px 40px 90px 20px var(--dropdown-shadow);
 
             ~ .navbar-overlay {
                 visibility: visible;
@@ -55,7 +55,7 @@
         }
     }
 
-    @include abstract.breakpoint(md) {
+    @include abstract.breakpoint(sm) {
         padding: 10px 10px 20px 20px;
 
         inset: 0 10% 0 0;
@@ -66,7 +66,7 @@
             padding-bottom: 15px;
         }
 
-        @include abstract.breakpoint(md) {
+        @include abstract.breakpoint(sm) {
             padding: 10px 0;
         }
     }
@@ -82,6 +82,10 @@
             align-items: flex-start;
 
             overflow-y: auto;
+        }
+
+        @include abstract.breakpoint(sm) {
+            height: 95%;
         }
     }
 
@@ -125,7 +129,7 @@
             height: initial;
         }
 
-        @include abstract.breakpoint(md) {
+        @include abstract.breakpoint(sm) {
             padding: 10px 0;
         }
     }
@@ -165,7 +169,7 @@
     display: flex;
     gap: 20px;
 
-    @include abstract.breakpoint(md) {
+    @include abstract.breakpoint(sm) {
         margin-left: 0;
     }
 
@@ -189,7 +193,7 @@
             width: 100%;
             padding: 15px 0;
         }
-        @include abstract.breakpoint(md) {
+        @include abstract.breakpoint(sm) {
             padding: 10px 0;
         }
 
